<?xml version="1.0" encoding="utf-8" ?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="3dp"
    android:clickable="true"
    android:focusable="true"
    android:checkable="true"
    style="?attr/materialCardViewElevatedStyle"
    app:cardBackgroundColor="?attr/colorSurfaceContainer"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/txtNA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/empleado"
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/teal_700"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtNombresYApellidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/nombres"
                    android:paddingStart="5dp"
                    android:textAppearance="?attr/textAppearanceTitleSmall"
                    android:fontFamily="@font/ubuntu_light"
                    android:textColor="@color/teal_700"
                    tools:ignore="RtlSymmetry" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/btnUpdate"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/editar"
                        android:layout_marginEnd="30dp"
                        android:src="@drawable/edit"/>

                    <ImageView
                        android:id="@+id/btnDelete"
                        android:layout_width="29dp"
                        android:layout_height="29dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/eliminar"
                        android:src="@drawable/delete"/>


                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/txtHB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:text="@string/haberbasico"
                android:fontFamily="@font/ubuntu_light"
                android:paddingEnd="5dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txtHaberB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:text="@string/haber_basico"
                android:fontFamily="@font/ubuntu_light"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/txtVH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:text="@string/ventashardware"
                android:textStyle="bold"
                android:fontFamily="@font/ubuntu_light"
                android:paddingEnd="5dp"
                android:layout_marginTop="5dp"
                tools:ignore="RtlSymmetry" />


            <TextView
                android:id="@+id/txtVHardware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:text="@string/ventas_hardware"
                android:fontFamily="@font/ubuntu_light"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/txtVS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:text="@string/ventassoftware"
                android:fontFamily="@font/ubuntu_light"
                android:textStyle="bold"
                android:paddingEnd="5dp"
                android:layout_marginTop="5dp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/txtVSoftware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:text="@string/ventas_software"
                android:fontFamily="@font/ubuntu_light"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/txtLP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:text="@string/liquido_pagable"
                android:fontFamily="@font/ubuntu_light"
                android:textStyle="bold"
                android:paddingEnd="5dp"
                android:layout_marginTop="5dp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/txtLPagable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:text="@string/liquido_pagable"
                android:fontFamily="@font/ubuntu_light"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>