<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".AddEmpleadoActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:fontFamily="@font/ubuntu_light"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:textColor="@color/teal_950"
        android:text="@string/agregar_empleado" />
    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/check"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/guardar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:inputType="text"
                android:fontFamily="@font/ubuntu_light"
                android:hint="@string/nombres" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/ubuntu_light"
                android:inputType="text"
                android:hint="@string/apellidos" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutHaberBasico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputHaberB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:fontFamily="@font/ubuntu_light"
                android:inputType="number"
                android:hint="@string/haber_basico" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutVSoftware"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputVSoftware"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_light"
                    android:inputType="number"
                    android:hint="@string/ventas_software" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLayoutVHardware"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputVHardware"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:fontFamily="@font/ubuntu_light"
                    android:hint="@string/ventas_hardware" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>